--- a/docker/fpm/Dockerfile
+++ b/docker/fpm/Dockerfile
@@ -26,26 +26,19 @@ RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl
 RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
 RUN docker-php-ext-install gd
 
-# Add user for laravel application
-RUN groupadd -g 1000 www
-RUN useradd -u 1000 -ms /bin/bash -g www www
-
-# Copy existing application directory contents
-COPY . /var/www
-
-# Copy existing application directory permissions
-COPY --chown=www:www . /var/www
-
-
-# Composer
-RUN curl -sS https://getcomposer.org/installer | php
-RUN mv composer.phar /usr/local/bin/composer && \
-    chmod +x /usr/local/bin/composer && \
-    composer self-update
-RUN command -v composer
+## Add user for laravel application
+#RUN groupadd -g 1000 www
+#RUN useradd -u 1000 -ms /bin/bash -g www www
+#
+## Copy existing application directory contents
+#COPY . /var/www
+#
+## Copy existing application directory permissions
+#COPY --chown=www:www . /var/www
 
 # Change current user to www
-USER www
+#USER www
+USER root
 
 
 EXPOSE 9000
