--- a/docker/fpm/Dockerfile
+++ b/docker/fpm/Dockerfile
@@ -26,20 +26,18 @@ RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl
 RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
 RUN docker-php-ext-install gd
 
-## Add user for laravel application
-#RUN groupadd -g 1000 www
-#RUN useradd -u 1000 -ms /bin/bash -g www www
-#
-## Copy existing application directory contents
-#COPY . /var/www
-#
-## Copy existing application directory permissions
-#COPY --chown=www:www . /var/www
+# Add user for laravel application
+RUN groupadd -g 1000 www
+RUN useradd -u 1000 -ms /bin/bash -g www www
+
+# Copy existing application directory contents
+COPY . /var/www
+
+# Copy existing application directory permissions
+COPY --chown=www:www . /var/www
 
 # Change current user to www
-#USER www
-USER root
-
+USER www
 
 EXPOSE 9000
 
